--- a/locales/es.json
+++ b/locales/es.json
@@ -39,5 +39,7 @@
   "delivered": "Entregados",
   "pendingEggBoxes": "Cajas Huevos Pend.",
   "pendingOilCans": "Garrafas Aceite Pend.",
-  "recentOrders": "Pedidos Recientes"
+  "recentOrders": "Pedidos Recientes",
+  "formError": "Por favor, completa tu nombre y selecciona al menos un producto.",
+  "submitError": "Hubo un error al enviar tu pedido. Por favor, inténtalo de nuevo."
 }
