FIX: Solución final a todos los errores de tipo y sintaxis

--- a/locales/ca.json
+++ b/locales/ca.json
@@ -41,5 +41,6 @@
   "pendingOilCans": "Garrafes Oli Pend.",
   "recentOrders": "Comandes Recents",
   "formError": "Si us plau, omple el teu nom i selecciona almenys un producte.",
-  "submitError": "Hi ha hagut un error en enviar la teva comanda. Si us plau, torna-ho a provar."
+  "submitError": "Hi ha hagut un error en enviar la teva comanda. Si us plau, torna-ho a provar.",
+  "pendingOrders": "Comandes Pendents"
 }
